# wgpu-commentary

./: .gitignore  Cargo.toml  readme.md
00-modern-graphics-api-overview/: Cargo.toml  draft.md  manuscript_1.md  manuscript_2.md
01-wgpu-overview/: Cargo.toml  draft.md
02-wgpu-triangle-tutorial/: Cargo.toml  draft.md
02-wgpu-triangle-tutorial/src/: app.rs  gpu.rs  main.rs  shader.wgsl
03-texture/: Cargo.toml  draft.md
03-texture/src/: app.rs
04-uniform-buffer/: Cargo.toml  draft.md
04-uniform-buffer/src/: gpu.rs  shader.wgsl
05-depth-buffer/: Cargo.toml  draft.md
06-instancing/: Cargo.toml  draft.md
07-msaa/: Cargo.toml  draft.md
08-scissor-and-stencil-test/: Cargo.toml  draft.md
09-viewport/: Cargo.toml
10-error-handling/: Cargo.toml
11-compute-shader/: Cargo.toml
12-checking-limits-and-features/: Cargo.toml
13-gpu-performance-overview/: Cargo.toml
14-debugging-and-performance-measurement/: Cargo.toml
15-textures-3d/: Cargo.toml
16-multiview/: Cargo.toml
17-push-constants/: Cargo.toml
18-multiple-rendering-targets/: Cargo.toml
19-gpu-driven-rendering/: Cargo.toml
20-occlusion-culling/: Cargo.toml
21-ray-tracing/: Cargo.toml
